Changed src folder structure to structure before initial commit. Updated business API calls to be contained with the businessRoutes.js file, and fetch favourite count,

--- a/public/index/index.html
+++ b/public/index/index.html
@@ -66,7 +66,7 @@
                                 <button class="dropdown-item" data-value="Relevance">Relevance</button>
                                 <button class="dropdown-item" data-value="Rating">Rating</button>
                                 <button class="dropdown-item" data-value="Reviews">Reviews</button>
-                                <button class="dropdown-item" data-value="Recently Updated">Recently Updated</button>
+                                <button class="dropdown-item" data-value="Favourites">Favourites</button>
                             </div>
                         </div>
                     </div>
