--- a/public/index/index.html
+++ b/public/index/index.html
@@ -4,15 +4,15 @@
         <title>Dashboard | Byte-Sized Business Boost</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="index/css/base.css">
-        <link rel="stylesheet" href="index/css/layout.css">
-        <link rel="stylesheet" href="index/css/navbar.css">
-        <link rel="stylesheet" href="index/css/search.css">
-        <link rel="stylesheet" href="index/css/topControls.css">
-        <link rel="stylesheet" href="index/css/pagination.css">
-        <link rel="stylesheet" href="index/css/filters/filters.css">
-        <link rel="stylesheet" href="index/css/filters/categories.css">
-        <link rel="stylesheet" href="index/css/businessGrid.css">
+        <link rel="stylesheet" href="/index/css/base.css">
+        <link rel="stylesheet" href="/index/css/layout.css">
+        <link rel="stylesheet" href="/index/css/navbar.css">
+        <link rel="stylesheet" href="/index/css/search.css">
+        <link rel="stylesheet" href="/index/css/topControls.css">
+        <link rel="stylesheet" href="/index/css/pagination.css">
+        <link rel="stylesheet" href="/index/css/filters/filters.css">
+        <link rel="stylesheet" href="/index/css/filters/categories.css">
+        <link rel="stylesheet" href="/index/css/businessGrid.css">
     </head>
     <body>
         <!-- NAVBAR -->
@@ -167,13 +167,13 @@
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="index/js/utils/color.js"></script>
-        <script src="index/js/data/businesses.js"></script>
-        <script src="index/js/data/categories.js"></script>
-        <script src="index/js/ui/accordion.js"></script>
-        <script src="index/js/ui/favourites.js"></script>
-        <script src="index/js/ui/pagination.js"></script>
-        <script type="module" src="index/js/app.js"></script>
-        <script src="index/js/auth.js"></script>
+        <script src="/index/js/utils/color.js"></script>
+        <script src="/index/js/data/businesses.js"></script>
+        <script src="/index/js/data/categories.js"></script>
+        <script src="/index/js/ui/accordion.js"></script>
+        <script src="/index/js/ui/favourites.js"></script>
+        <script src="/index/js/ui/pagination.js"></script>
+        <script type="module" src="/index/js/app.js"></script>
+        <script src="/index/js/auth.js"></script>
     </body>
 </html>
