Fixed Electron build not loading CSS and JS files.

--- a/public/index/index.html
+++ b/public/index/index.html
@@ -18,7 +18,13 @@
         <!-- NAVBAR -->
         <nav class="navbar navbar-main content-container">
             <div class="navbar-inner">
-                <span class="navbar-brand">Byte-Sized Business Boost</span>
+                <div class="flex center">
+                    <a href="/" class="btn btn-sm">
+                        <span class="navbar-brand">
+                            Byte-Sized Business Boost
+                        </span>
+                    </a>
+                </div>
 
                 <div class="d-flex align-items-center gap-3">
                     <span id="roleBadge" class="badge bg-secondary">Guest</span>
