--- a/public/index/index.html
+++ b/public/index/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="/index/css/filters/filters.css">
         <link rel="stylesheet" href="/index/css/filters/categories.css">
         <link rel="stylesheet" href="/index/css/businessGrid.css">
+        <link rel="stylesheet" href="/index/css/footer.css">
     </head>
     <body>
         <!-- NAVBAR -->
@@ -206,6 +207,36 @@
                 <div id="businessList" class="business-grid"></div>
             </section>
         </div>
+
+        <footer class="site-footer">
+            <div class="site-footer-shell">
+                <section class="site-footer-brand">
+                    <h3 class="site-footer-title">Byte-Sized Business Boost</h3>
+                    <p class="site-footer-tagline">Helping communities discover and support local businesses | built for FBLC.</p>
+                    <a class="site-footer-social" href="https://github.com" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                        <i class="bi bi-github"></i>
+                        <span>GitHub</span>
+                    </a>
+                </section>
+
+                <nav class="site-footer-columns" aria-label="Footer navigation">
+                    <div class="site-footer-col">
+                        <h4>Explore</h4>
+                        <a href="/">Home</a>
+                        <a href="/profile">Profile</a>
+                    </div>
+                    <div class="site-footer-col">
+                        <h4>Project</h4>
+                        <a href="https://github.com" target="_blank" rel="noopener noreferrer">Source code</a>
+                        <p>Open-source learning project.</p>
+                    </div>
+                    <div class="site-footer-col">
+                        <h4>FBLC</h4>
+                        <p>Student-built showcase focused on practical local business impact.</p>
+                    </div>
+                </nav>
+            </div>
+        </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="/index/js/utils/color.js"></script>
