Added comments to the code for clarity

--- a/public/index/index.html
+++ b/public/index/index.html
@@ -130,7 +130,6 @@
 
         </div>
 
-
         <!-- MAIN CONTENT -->
         <div class="content-container main-layout">
             <!-- FILTERS -->
@@ -208,6 +207,7 @@
             </section>
         </div>
 
+        <!-- FOOTER -->
         <footer class="site-footer">
             <div class="site-footer-shell">
                 <section class="site-footer-brand">
@@ -242,10 +242,11 @@
         <script src="/index/js/utils/color.js"></script>
         <script src="/index/js/data/businesses.js"></script>
         <script src="/index/js/data/categories.js"></script>
+        <script src="/index/js/data/ratings.js"></script>
         <script src="/index/js/ui/accordion.js"></script>
         <script src="/index/js/ui/favourites.js"></script>
         <script src="/index/js/ui/pagination.js"></script>
-        <script type="module" src="/index/js/app.js"></script>
+        <script src="/index/js/app.js"></script>
         <script src="/index/js/auth.js"></script>
     </body>
 </html>
