Added the ability to view other profiles.

--- a/public/index/index.html
+++ b/public/index/index.html
@@ -213,7 +213,7 @@
                 <section class="site-footer-brand">
                     <h3 class="site-footer-title">Byte-Sized Business Boost</h3>
                     <p class="site-footer-tagline">Helping communities discover and support local businesses | built for FBLC.</p>
-                    <a class="site-footer-social" href="https://github.com" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                    <a class="site-footer-social" href="https://github.com/MrTophatt/Byte-Sized-Business-Boost" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
                         <i class="bi bi-github"></i>
                         <span>GitHub</span>
                     </a>
@@ -227,7 +227,7 @@
                     </div>
                     <div class="site-footer-col">
                         <h4>Project</h4>
-                        <a href="https://github.com" target="_blank" rel="noopener noreferrer">Source code</a>
+                        <a href="https://github.com/MrTophatt/Byte-Sized-Business-Boost" target="_blank" rel="noopener noreferrer">Source code</a>
                         <p>Open-source learning project.</p>
                     </div>
                     <div class="site-footer-col">
